--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "url": "https://github.com/vlad-saling/star-trek-ipsum.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-ssh": "^0.11.1",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-processhtml": "^0.3.3"
+    "grunt-processhtml": "^0.3.3",
+    "grunt-ssh": "^0.11.1"
   }
 }
