--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-processhtml": "^0.3.3",
-    "grunt-ssh": "^0.11.1"
+    "grunt-processhtml": "^0.3.3"
   }
 }
