--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-jsonmin": "^0.2.4",
     "grunt-processhtml": "^0.3.3"
   }
 }
