--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-embed": "^0.2.1",
     "grunt-jsonmin": "^0.2.4",
-    "grunt-processhtml": "^0.3.3"
+    "grunt-processhtml": "^0.3.3",
+    "grunt-sass": "^1.2.1"
   }
 }
