--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "type": "git",
     "url": "https://github.com/vlad-saling/star-trek-ipsum.git"
   },
+  "scripts": {
+    "serve": "http-server ./_prod"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.4.0",
@@ -15,6 +18,7 @@
     "grunt-embed": "^0.2.1",
     "grunt-jsonmin": "^0.2.4",
     "grunt-processhtml": "^0.3.3",
-    "grunt-sass": "^1.2.1"
+    "grunt-sass": "^2.1.0",
+    "http-server": "^0.12.3"
   }
 }
